+++++++++++
Python News
+++++++++++

What's New in Python 3.2.7?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #24044: Fix possible null pointer dereference in list.sort in out of
  memory conditions.

- Issue #23055: Fixed a buffer overflow in PyUnicode_FromFormatV.  Analysis
  and fix by Guido Vranken.


What's New in Python 3.2.6?
===========================

*Release date: 11-Oct-2014*

Core and Builtins
-----------------

- Issue #23165: Perform overflow checks before allocating memory in the
  _Py_char2wchar function.

- Issue #19529: Fix a potential crash in converting Unicode objects to wchar_t
  when Py_UNICODE is 4 bytes but wchar_t is 2 bytes, for example on AIX.

Library
-------

- Issue #16043: Add a default limit for the amount of data xmlrpclib.gzip_decode
  will return. This resolves CVE-2013-1753.

- Issue #16040: CVE-2013-1752: nntplib: Limit maximum line lengths to 2048 to
  prevent readline() calls from consuming too much memory.  Patch by Jyrki
  Pulliainen.

- Issue #16039: CVE-2013-1752: Change use of readline in imaplib module to limit
  line length.  Patch by Emil Lind.

- Issue #22421: Fix a regression that caused the pydoc server to be bound to
  all interfaces instead of only localhost.

- Issue #22419: Limit the length of incoming HTTP request in wsgiref server to
  65536 bytes and send a 414 error code for higher lengths. Patch contributed
  by Devin Cook.

- Issue #22517: When a io.BufferedRWPair object is deallocated, clear its
  weakrefs.

- Issue #16041: CVE-2013-1752: poplib: Limit maximum line lengths to 2048 to
  prevent readline() calls from consuming too much memory.  Patch by Jyrki
  Pulliainen.

- Issue #16042: CVE-2013-1752: smtplib: Limit amount of data read by
  limiting the call to readline().  Original patch by Christian Heimes.

- Issue #16038: CVE-2013-1752: ftplib: Limit amount of data read by
  limiting the call to readline().  Original patch by Michał